--- a/views/good.ejs
+++ b/views/good.ejs
@@ -1,6 +1,8 @@
 <% include partials/header %>
 
-		<h1><%= title %></h1>
-
+		<h1><%= title %></h1> 
+		<a href="/nextdoggo" onclick="/nextdoggo" >
+			<img src="/images/doggo.jpg" alt="mydoggo"  style="width:500px; height:fit;">
+			</a>
 
 <% include partials/footer %>
