--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 	<form method="POST" action ="/result" >
 		<select class = "Result" name = "Result" id = "Result">
 			<option value = "Yes">Yes</option>
-			<option value = "No" selected>No</option>
+			<option value = "No">No</option>
 		</select>
 		<input type="submit" value = "Submit">
 	</form>
