Made minor corrections, also changed the source of the dog pictures to Reddit.com/r/FluffyDogs

--- a/views/good.ejs
+++ b/views/good.ejs
@@ -1,8 +1,8 @@
 <% include partials/header %>
 
 		<h1><%= title %></h1> 
-		<a href="/nextdoggo" onclick="/nextdoggo" >
-			<img src="/images/doggo.jpg" alt="mydoggo"  style="width:500px; height:fit;">
+		<a href="/nextdoggo" >
+			<img src="/images/doggo.jpg" alt="mydoggo"  style="width:400px; height:fit;">
 			</a>
 
 <% include partials/footer %>
