Centered the texts, added endnotes, and added a link to my GitHub

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include partials/header %>
-
+<center>
 		<h1><%= title %></h1>
 
 
@@ -10,7 +10,7 @@
 		</select>
 		<input type="submit" value = "Submit">
 	</form>
-
+</center>
 
 
 
