--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,8 @@
-	</body>
+<p>Created by 
+	<a href="https://www.GitHub.com/MichaelTong1/"> 
+	Michael Tong </a>
+	</p>
+
+</center>
+</body>
 </html>
