--- a/views/bad.ejs
+++ b/views/bad.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 
 		<h1><%= title %></h1>
-
+<p> (Hint: Try going back and saying yes this time!) </p>
 
 <% include partials/footer %>
