Changed some text

--- a/views/doggopage.ejs
+++ b/views/doggopage.ejs
@@ -5,7 +5,7 @@
 			<img id="doggo" src=<%= url %> alt="mydoggo" 
 			style="width:400px; height:fit;">
 		</a>
-	<p> Please note that some won't be pictures of dogs and nothing is ever random :)  <br /> 
-	If you get "The image you are requesting does not exist or is no longer available." Just click the picture again! 
+	<p> Please note that some pictures won't be of dogs and nothing is ever random :)  <br /> 
+	If you get "The image you are requesting does not exist" Just click the picture again! 
 </p>
 <% include partials/footer %>
