Added new categories of dog pictures!

--- a/views/bad.ejs
+++ b/views/bad.ejs
@@ -1,6 +1,9 @@
 <% include partials/header %>
 
 		<h1><%= title %></h1>
-<p> (Hint: Try going back and saying yes this time!) </p>
+<p> (Hint: Try going 
+	<a href="/">
+	back </a> 
+	and saying yes this time!) </p>
 
 <% include partials/footer %>
