--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<link rel="shortcut icon" type="images/png" href="images/doggo1.png"/>
+
 		<title src="/images/doggo.jpg">Random Dog Generator</title>
 		<script
   src="https://code.jquery.com/jquery-1.12.4.js"
