Updated website template to fit all. Made pages for About me and Contact me.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,23 @@
-<center><p>Created by 
-	<a href="https://www.GitHub.com/MichaelTong1/"> 
-	Michael Tong </a>
-	</p>
+<!DOCTYPE html>
+<html>
 
-</center>
+<footer class="w3-container w3-padding-32 w3-white w3-center w3-large"> 
+
+</footer>
+
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-16 w3-light-grey w3-center w3-large"> 
+  <a href="https://www.instagram.com/v2fail"
+  style="text-decoration: none; font-size: 32px"
+  <i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <a href="https://www.github.com/MichaelTong1"
+  style="text-decoration: none; font-size: 32px"
+  <i class="fa fa-github w3-hover-opacity"></i></a>
+  <a href="https://www.Linkedin.com/in/MichaelTong1"
+  style="text-decoration: none; font-size: 32px"
+  <i class="fa fa-linkedin w3-hover-opacity"></i></a>
+</footer>
+
 </body>
 </html>
