--- a/views/bad.ejs
+++ b/views/bad.ejs
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
+<html>
+
+
 <% include partials/header %>
 
 		<h1><%= title %></h1>
 <p> (Hint: Try going 
-	<a href="/">
+	<a href="/dogwebapp">
 	back </a> 
 	and saying yes this time!) </p>
 
