--- a/views/doggopage.ejs
+++ b/views/doggopage.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <% include partials/header %>
 
 		<h1><%= title %></h1>
@@ -9,3 +11,4 @@
 	If you get "The image you are requesting does not exist" Just click the picture again! 
 </p>
 <% include partials/footer %>
+</html>
