--- a/views/good.ejs
+++ b/views/good.ejs
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html>
+
 <% include partials/header %>
+
 <center>
 		<h1><%= title %></h1> 
 	<form method="POST" action ="/choose" >
@@ -10,8 +14,6 @@
 		</select>
 		<input type="submit" value = "Submit">
 	</form>
-</center>
-
 
 
 <% include partials/footer %>
