--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,17 @@
 <html>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1 {font-family: "Raleway", Arial, sans-serif}
+h1 {letter-spacing: 6px}
+.w3-row-padding img {margin-bottom: 12px}
+</style>
+
+
 	<head>
 		<link rel="shortcut icon" type="images/png" href="images/doggo1.png"/>
 
@@ -10,3 +23,6 @@
   <script src="js/main.js"></script> <center>
 	</head>
 	<body>
+		<div class="w3-content" style="max-width:1500px">
+		</div></body>
+
