Updated title and icon

--- a/views/contactme.ejs
+++ b/views/contactme.ejs
@@ -3,11 +3,16 @@
 
 <% include partials/fileheader %>
 
+<style>
 
-  <h1>Contact me page</h1>
-    <h1>contact me at Michael_Tong@Outlook.com</h1>
-    <p> contact me contact me </p> 
-    <p> contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me contact me  </p> 
+</style>
+
+
+
+    <p> Michael_Tong@Outlook.com </p> 
+
+</header>
+
 
 <% include partials/footer %>
 
