--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<spacing1 class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+</spacing1>
 <footer class="w3-container w3-padding-32 w3-white w3-center w3-large"> 
 
 </footer>
