--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
 <center>
 		<h1><%= title %></h1>
 
+		<link rel="shortcut icon" type="images/png" href="images/doggo1.png"/>
 
+		<title src="/images/doggo.jpg">Random Dog Generator</title>
 	<form method="POST" action ="/result" >
 		<select class = "Result" name = "Result" id = "Result">
 			<option value = "Yes">Yes</option>
