--- a/views/partials/fileheader.ejs
+++ b/views/partials/fileheader.ejs
@@ -11,7 +11,7 @@ h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 
-		<title ><%title%></title>
+		<title ><%=title%></title>
 
 	<head>
 		<script
