Padding for About Me page

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -2,8 +2,9 @@
 <html>
 
 <% include partials/fileheader %>
-
-
+<style>
+p {padding: 25px 250px} 
+</style>
   <h1>This is my about me page</h1>
     <h1>about me </h1>
     <p> about me about me </p> 
@@ -23,7 +24,6 @@ Johnson manages to get the vest off Soo Yung while Griffin heads toward the roof
 
 Han and Soo Yung are reunited, and Han sends Carter and Lee on vacation to Hong Kong as a reward for their actions. Before Carter leaves, Agents Russ and Whitney offer him a position in the FBI, which he mockingly refuses. Carter boards the airplane with Lee, who starts singing Edwin Starr's "War", annoying Carter.
 </p>
-
 
 <% include partials/footer %>
 
