Added new picture to About Me

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -5,17 +5,15 @@
 <style>
 p {padding: 25px 250px} 
 </style>
-  <h1>This is my about me page</h1>
-    <h1>about me </h1>
-    <p> about me about me </p> 
+  <h1>About Me</h1>
 
     <div>
-    <p style="float: left;"><img src="http://placekitten.com/g/200/200" height="400px" width="400px" border="1px"></p>
-    <p align="left">Michael Tong was born in Dallas, Texas in 1996. Text Text Text Text Text Text Text Text Text Text Text Text 
+    <p style="float: left;"><img src="/images/me.jpg" width="500px" border="1px"></p>
+    <p style="padding-top: 100px; float: left;"> <p align="left">Michael Tong was born in Dallas, Texas. Text Text Text Text Text Text Text Text Text Text Text Text 
     	Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
     	Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
 
-    </p>
+    </p></p>
 
 <% include partials/footer %>
 
