Added content in About Me. Added new pictures.

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -8,11 +8,11 @@ p {padding: 25px 250px}
   <h1>About Me</h1>
 
     <div>
-    <p style="float: left;"><img src="images/Me.jpg" width="400px" border="1px"></p>
-    <p style="padding-top: 100px; float: left;"> <p align="left">Michael Tong was born in Dallas, Texas. Text Text Text Text Text Text Text Text Text Text Text Text 
-    	Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
-    	Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
-
+    <p style="float: left;"><img src="images/MeHoodie.jpg" width="400px" border="1px"></p>
+    <p style="padding-top: 20px; float: left;"> <p align="left">Hi, my name is Michael! I'm currently pursuing my Bachelor's Degree in Computer Science at The University of Texas at Dallas. Since I will be graduating in May 2019, I am looking for job opportunities around the Dallas, Texas area. 
+</p> <p style="padding-top: 20px; float: left;"> <p align="left">
+    	Lately, I've been updating my new website so I can have it finished by the end of the year. You can checkout my progress on my Github page! Feel free to send me an email at Michael_Tong@Outlook.com if you need to contact me. Thanks! 
+</p>
     </p></p>
 
 <% include partials/footer %>
