--- a/views/partials/fileheader.ejs
+++ b/views/partials/fileheader.ejs
@@ -34,7 +34,7 @@ h1 {letter-spacing: 6px}
     <div class="w3-bar w3-border">
       <a href="/#" class="w3-bar-item w3-button w3-light-grey">Home</a>
       <a href="/aboutme" class="w3-bar-item w3-button ">About Me</a>
-      <a href="/#" class="w3-bar-item w3-button ">Resume</a>
+      <a href="/myresume" class="w3-bar-item w3-button ">Resume</a>
       <a href="/dogwebapp" class="w3-bar-item w3-button">My Simple Web App</a>
       <a href="/contactme" class="w3-bar-item w3-button w3-hide-small">Contact</a>
     </div>
